# forsp

./: .gitignore  Cargo.toml  README.md
scripts/: .env.example  build.sh  deploy.sh  run_local.sh
src/: env.rs  help.txt  interpreter.rs  lexer.rs  lib.rs  main.rs  message.rs  nonempty.rs  parser.rs  primitive.rs  sexpr.rs  vm.rs
www/: help.txt  index.html  index.js  style.css  worker.js
