[package]
name = "forsp"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.106"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3.83", features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
] }

[lib]
name = "forsp"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "forsp"
path = "src/main.rs"
